@@ -1,3 +1,6 @@
+2006-05-30: 
+	- added a segv handler that writes into 
+          /var/log/dist-upgrade-segv.log
 2006-05-24: 
 	- if the initial "update()" fails, just exit, don't try
           to restore the old sources.list (nothing was modified yet)
@@ -10,6 +13,7 @@
 	- translations updated from rosetta
 	- fixed a bug in the demotions calculation (ubuntu: #46245)
 	- typos fixed and translations unfuzzied (ubuntu: #46792,#46464)
+	- upload
 2006-05-12: 
 	- space checking improved (ubuntu: #43948)
         - show software that was demoted from main -> universe 
